{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 16,
  "lineage": "fc16d380-c620-76b5-369a-0f2bb33d4e20",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a6ca275d4e9cd3b",
            "arn": "arn:aws:ec2:us-east-1:373160674113:elastic-ip/eipalloc-04a6ca275d4e9cd3b",
            "domain": "vpc",
            "id": "eipalloc-04a6ca275d4e9cd3b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-223-89-237.compute-1.amazonaws.com",
            "public_ip": "3.223.89.237",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project-NAT-EIP"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project-NAT-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.demo_ecs_igw",
            "aws_vpc.demo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo_ecs_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373160674113:internet-gateway/igw-0b31e1366a2bc160e",
            "id": "igw-0b31e1366a2bc160e",
            "owner_id": "373160674113",
            "tags": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project-IGW"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project-IGW"
            },
            "vpc_id": "vpc-04ce6dfd290f8bafa"
          },
          "dependencies": [
            "aws_vpc.demo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "demo_ecs_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a6ca275d4e9cd3b",
            "association_id": "eipassoc-0c78395399ade5600",
            "connectivity_type": "public",
            "id": "nat-0d7a0329cd53df6f5",
            "network_interface_id": "eni-0ec300efd6428980c",
            "private_ip": "10.0.1.141",
            "public_ip": "3.223.89.237",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f5c9bf170fa64303",
            "tags": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project-NAT-Gateway"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project-NAT-Gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.demo_ecs_igw",
            "aws_subnet.public_subnets",
            "aws_vpc.demo_ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373160674113:route-table/rtb-069086c2cdeb37406",
            "id": "rtb-069086c2cdeb37406",
            "owner_id": "373160674113",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d7a0329cd53df6f5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project-Private-RT"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ce6dfd290f8bafa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.demo_ecs_igw",
            "aws_nat_gateway.demo_ecs_nat",
            "aws_subnet.public_subnets",
            "aws_vpc.demo_ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373160674113:route-table/rtb-0abc9440f77b8a389",
            "id": "rtb-0abc9440f77b8a389",
            "owner_id": "373160674113",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b31e1366a2bc160e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project-Public-RT"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ce6dfd290f8bafa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo_ecs_igw",
            "aws_vpc.demo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a762fdbb0a75a75",
            "route_table_id": "rtb-069086c2cdeb37406",
            "subnet_id": "subnet-030fd5e927d1f4e98"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.demo_ecs_igw",
            "aws_nat_gateway.demo_ecs_nat",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.demo_ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01229222c3e25fa11",
            "route_table_id": "rtb-069086c2cdeb37406",
            "subnet_id": "subnet-01baa83d3c708b762"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.demo_ecs_igw",
            "aws_nat_gateway.demo_ecs_nat",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.demo_ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df33e01c189a9b20",
            "route_table_id": "rtb-0abc9440f77b8a389",
            "subnet_id": "subnet-0f5c9bf170fa64303"
          },
          "dependencies": [
            "aws_internet_gateway.demo_ecs_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.demo_ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0382c7208b8635837",
            "route_table_id": "rtb-0abc9440f77b8a389",
            "subnet_id": "subnet-07ca394879d533b2d"
          },
          "dependencies": [
            "aws_internet_gateway.demo_ecs_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.demo_ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373160674113:subnet/subnet-030fd5e927d1f4e98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030fd5e927d1f4e98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "373160674113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project-Private-Subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project-Private-Subnet-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-04ce6dfd290f8bafa"
          },
          "dependencies": [
            "aws_vpc.demo_ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373160674113:subnet/subnet-01baa83d3c708b762",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01baa83d3c708b762",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "373160674113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project-Private-Subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project-Private-Subnet-2",
              "Type": "Private"
            },
            "vpc_id": "vpc-04ce6dfd290f8bafa"
          },
          "dependencies": [
            "aws_vpc.demo_ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373160674113:subnet/subnet-0f5c9bf170fa64303",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5c9bf170fa64303",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "373160674113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project-Public-Subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project-Public-Subnet-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-04ce6dfd290f8bafa"
          },
          "dependencies": [
            "aws_vpc.demo_ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373160674113:subnet/subnet-07ca394879d533b2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ca394879d533b2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "373160674113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project-Public-Subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project-Public-Subnet-2",
              "Type": "Public"
            },
            "vpc_id": "vpc-04ce6dfd290f8bafa"
          },
          "dependencies": [
            "aws_vpc.demo_ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo_ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373160674113:vpc/vpc-04ce6dfd290f8bafa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-087e004fe9b162252",
            "default_route_table_id": "rtb-0e7251c8807d790a2",
            "default_security_group_id": "sg-0aaedb170f802af7e",
            "dhcp_options_id": "dopt-9e06fce7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ce6dfd290f8bafa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e7251c8807d790a2",
            "owner_id": "373160674113",
            "tags": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project",
              "Project": "Demo-ECS-Project"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project",
              "Project": "Demo-ECS-Project"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373160674113:vpc-endpoint/vpce-0c9b82670b839612a",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-0c9b82670b839612a",
            "owner_id": "373160674113",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-069086c2cdeb37406",
              "rtb-0abc9440f77b8a389"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project-S3-VPC-Endpoint"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "Demo-ECS-Project-S3-VPC-Endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-04ce6dfd290f8bafa"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.demo_ecs_igw",
            "aws_nat_gateway.demo_ecs_nat",
            "aws_route_table.private_route_table",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.demo_ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}